Permit image cropper params and fix margin of crop info message. Closes #420

--- a/app/assets/stylesheets/alchemy/base.scss
+++ b/app/assets/stylesheets/alchemy/base.scss
@@ -423,7 +423,7 @@ div#images {
   .info.message {
     float: right;
     width: 134px;
-    margin-left: 8px;
+    margin: 0 0 0 8px;
     padding: 0 8px 0 32px;
   }
 
